2000-07-17 14:18:16  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mailcap.el (mailcap-mimetypes-parsed-p): New variable.
	(mailcap-parse-mimetypes): Use it.
	(mailcap-extension-to-mime): Parse mimetype.
	(mailcap-mime-types): Ditto.
	* mml.el (mml-minibuffer-read-type): Ditto.

2000-07-16 18:25:07  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nndoc.el (nndoc-type-alist): Add outlook.
	(nndoc-outlook-type-p): New function.
	(nndoc-outlook-article-begin): Ditto.

2000-07-16  Daiki Ueno  <ueno@unixuser.org>

	* gnus-sum.el (gnus-restore-hidden-threads-configuration): Save
	excursion.

2000-07-15  Simon Josefsson  <simon@josefsson.org>

	* gnus-cus.el (gnus-group-parameters, banner): Type is regexp.

	* imap.el (imap): 
	(imap-kerberos4-program): 
	(imap-gssapi-program): 
	(imap-ssl-program): Customization.
	(imap-shell-program): 
	(imap-shell-host): New variables.
	(imap-streams): 
	(imap-stream-alist): Add shell.
	(imap-shell-p): 
	(imap-shell-open): New functions.
	(imap-open): Don't call authenticator if preauth.
	(imap-authenticate): Return t if already authenticated.

2000-07-14  Simon Josefsson  <simon@josefsson.org>

	* gnus.el (gnus-invalid-group-regexp): New variable.
	(gnus-read-group): Use it.

2000-07-14 12:40:51  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el (gnus-agent-fetch-group-1): mark-below, 
	expunge-below and orphan-score are "group variables".

2000-07-13  Simon Josefsson  <jas@pdc.kth.se>

	* gnus-srvr.el (gnus-browse-read-group): Don't pass fully
	qualified group names to `gnus-group-read-ephemeral-group'.

2000-07-13 07:40:39  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (srcdir): Define it before use it.

2000-07-12 19:37:50  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el: `W t' is toggle-header in info.

2000-07-12 16:50:06  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* lpath.el: Fbind subst-char-in-string.

2000-07-12 15:48:29  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* Makefile.in: Use W3DIR and lispdir.
	* dgnushack.el: Ditto.
